Adding some more images...

--- a/index.html
+++ b/index.html
@@ -325,6 +325,7 @@
 				</div>
 				<header class="flex-responsive">
 					<h2 class="">Our Life</h2>
+					<!--
 					<ul class="gallery-cats">
 						<li><a href="#" data-cat="*" class="current">All</a></li>
 						<li><a href="#" data-cat="bride-groom">Bride & Groom</a></li>
@@ -332,21 +333,26 @@
 						<li><a href="#" data-cat="dinner">Dinner</a></li>
 						<li><a href="#" data-cat="party">Party</a></li>
 					</ul>
+					-->
 				</header>
 				<div class="gallery-grid animation-chain" data-animation="zoomIn">
 					<div class="gallery-grid-item bride-groom">
-						<img src="https://placeholdit.imgix.net/~text?txtsize=120&txt=Coming+Soon!&w=1200&h=800" alt="">
+						<img src="img/gallery/buckingham.jpg" alt="">
 						<div class="gallery-hidden">
 							<ul class="image-list">
-								<li><img src="img/blank.png" data-src="https://placeholdit.imgix.net/~text?txtsize=120&txt=Coming+Soon!&w=1200&h=800" alt=""></li>
+								<li><img src="img/blank.png" data-src="img/gallery/wimbledon.jpg" alt=""></li>
+								<li><img src="img/blank.png" data-src="img/gallery/hampton.jpg" alt=""></li>
+								<li><img src="img/blank.png" data-src="img/gallery/buckingham.jpg" alt=""></li>
 							</ul>
 							<ul class="gallery-info">
 								<li class="name-cat">
-									<h3>Coming Soon!</h3>
-									<p></p>
+									<h3>Exploring London!</h3>
+									<p>United Kingdom</p>
 								</li>
 								<li class="desc">
-									<p></p>
+									<p>1) Wimbledon</p>
+									<p>2) Hampton Court Palace</p>
+									<p>3) Buckingham Palace</p>
 								</li>
 							</ul>
 						</div>
@@ -369,20 +375,20 @@
 						</div>
 					</div>
 					<div class="gallery-grid-item bride-groom">
-						<img src="https://placeholdit.imgix.net/~text?txtsize=120&txt=Coming+Soon!&w=1200&h=800" alt="">
+						<img src="img/gallery/wrigley.jpg" alt="">
 						<div class="gallery-hidden">
 							<ul class="image-list">
-								<li><img src="img/blank.png" data-src="https://placeholdit.imgix.net/~text?txtsize=120&txt=Coming+Soon!&w=1200&h=800" alt=""></li>
-								<li><img src="img/blank.png" data-src="https://placeholdit.imgix.net/~text?txtsize=120&txt=Coming+Soon!&w=1200&h=800" alt=""></li>
-								<li><img src="img/blank.png" data-src="https://placeholdit.imgix.net/~text?txtsize=120&txt=Coming+Soon!&w=1200&h=800" alt=""></li>
+								<li><img src="img/blank.png" data-src="img/gallery/wrigley.jpg" alt=""></li>
+								<li><img src="img/blank.png" data-src="img/gallery/atlanta.jpg" alt=""></li>
 							</ul>
 							<ul class="gallery-info">
 								<li class="name-cat">
-									<h3>Coming Soon!</h3>
+									<h3>Domestic Adventures!</h3>
 									<p></p>
 								</li>
 								<li class="desc">
-									<p></p>
+									<p>1) Wrigley Field</p>
+									<p>2) Georgia Aquarium</p>
 								</li>
 							</ul>
 						</div>
